--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,1 +1,15 @@
+FROM node:14
 
+WORKDIR /usr/app
+
+COPY package.json ./
+
+RUN npm install
+
+COPY . .
+
+EXPOSE 3001
+
+CMD npm start
+
+LABEL maintener="Jessy Cristina Lopes de Araujo <jessyaraujo395@gmail.com>"
