--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -10,6 +10,6 @@ COPY . .
 
 EXPOSE 3001
 
-CMD npm start
+CMD ["npm", "start"]
 
 LABEL maintener="Jessy Cristina Lopes de Araujo <jessyaraujo395@gmail.com>"
